[package]
name = "registry-classes-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
windows-core = "0.61.2"

[dependencies.windows]
version = "0.61.3"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Shell"
]
